--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,14 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+a {
+	text-decoration: none;
+}
+
+ul {
+	list-style: none;
+}
+li {
+	list-style: none;
+}
