--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,8 +39,17 @@ li {
 }
 
 .nav.fixed {
+	position: absolute;
 	position: sticky;
 	top: 0;
+}
+
+.menu {
+	width: 100%;
+	height: 100px;
+	position: absolute;
+	top: 81px;
+	position: sticky;
 }
 
 .footer {
@@ -64,7 +73,7 @@ li {
 .footer__infos {
 	color: #888;
 	font-weight: 400;
-	font-size: 12px;
+	font-size: 10px;
 	border-top: 1px solid #ccc;
 	padding-top: 10px;
 }
