--- a/src/components/organisms/Section/Section.module.scss
+++ b/src/components/organisms/Section/Section.module.scss
@@ -1,6 +1,19 @@
-.section {
-  display: flex;
+.detail__flex {
   width: 100%;
+  display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  .left {
+    width: 60%;
+  }
+  .right {
+    width: calc(40% - 40px - 2px - 40px);
+    margin: 20px 0 20px 40px;
+    height: 200px;
+    position: sticky;
+    top: 40px;
+    bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 16px;
+    padding: 20px;
+  }
 }
