[Chore]main map api제외

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,8 +68,8 @@ button {
 }
 
 .main {
-	width: var(--desktop-width);
-	padding: var(--desktop-padding);
+	/* width: var(--desktop-width); */
+	/* padding: var(--desktop-padding); */
 }
 
 .footer {
