--- a/src/components/atoms/LoginMenu/LoginMenu.module.scss
+++ b/src/components/atoms/LoginMenu/LoginMenu.module.scss
@@ -7,7 +7,19 @@
   justify-content: space-evenly;
   margin: 0 5px 0 0;
   align-items: center;
+  position: relative;
+  cursor: pointer;
   .icon {
     font-size: 32px;
+  }
+  .menu {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    width: 100px;
+    height: 100px;
+    background-color: white;
   }
 }
