--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -1,20 +1,22 @@
 .background {
   background-color: #000;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   opacity: 0.5;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  z-index: 4;
 }
 .whiteground {
   width: 400px;
   height: 500px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   background-color: white;
   border-radius: 16px;
-  transform: translate(-50%, 25%);
+  z-index: 4;
+  transform: translate(-50%, -50%);
 }
