[Feat] 공통컴포넌트 생성

--- a/src/components/atoms/Title/Title.module.scss
+++ b/src/components/atoms/Title/Title.module.scss
@@ -8,4 +8,13 @@
 .menu__items {
   display: flex;
   // width: 50%;
+  li {
+    &+li::before {
+      margin: 0 10px;
+      content: "·";
+    }
+    // &.divide::before {
+    //   content: ;
+    // }
+  }
 }
