--- a/src/components/atoms/Detail/DetailImage/DetailImage.module.scss
+++ b/src/components/atoms/Detail/DetailImage/DetailImage.module.scss
@@ -3,9 +3,11 @@
   width: 100%;
   display: grid;
   height: 500px;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: calc(25% - 10px) calc(25% - 10px) calc(25% - 10px) 25%;
   grid-template-rows: 50% 50%;
+  grid-gap: 10px;
   :nth-child(1) {
+    border-radius: 8px 0 0 8px;
     grid-column: 1/span 2;
     grid-row: 1/span 2;
     background-color: #ccc;
@@ -13,5 +15,11 @@
   :not(:nth-child(1)){
     background-color: #eee;
     border: 0.5px solid #ccc;
+  }
+  :nth-child(3) {
+    border-radius: 0 8px 0 0;
+  }
+  :last-child {
+    border-radius: 0 0 8px 0;
   }
 }
