--- a/src/components/atoms/Home/HomeMenuIcon/HomeMenuIcon.module.scss
+++ b/src/components/atoms/Home/HomeMenuIcon/HomeMenuIcon.module.scss
@@ -1,3 +1,16 @@
 .menu {
-  width: 50px;
+  width: 100px;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  cursor: pointer;
+  .icon {
+    width: 100%;
+  }
+  &.active {
+    border-bottom: 2px solid black;
+  }
 }
+
