--- a/src/components/atoms/Detail/DetailInfo/DetailInfo.module.scss
+++ b/src/components/atoms/Detail/DetailInfo/DetailInfo.module.scss
@@ -1,14 +1,20 @@
-.left {
+.flex {
+  width: 100%;
   display: flex;
-  font-size: 30px;
-  justify-content: center;
-  align-items: center;
-  width: 5%;
-  margin: 10px 0;
-}
-
-.right {
-  & h4 {
-    margin: 0;
+  flex-wrap: wrap;
+  margin: 20px 0;
+  .left {
+    display: flex;
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    width: 5%;
+    margin: 10px 0;
+  }
+  .right {
+    padding: 0 10px;
+    & h4 {
+      margin: 0;
+    }
   }
 }
