--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -103,11 +103,11 @@ button {
 	max-width: 700px;
 	margin: auto;
 	/* background-color: #888; */
-	background-color: white;
+	/* background-color: white; */
 }
 .detail__content > div + div {
 	margin: 5px 0;
-	background-color: transparent;
+	/* background-color: #eee; */
 }
 .mypage {
 	margin: 20px 0;
