--- a/src/components/atoms/Home/HomePageContent/Image.module.scss
+++ b/src/components/atoms/Home/HomePageContent/Image.module.scss
@@ -5,8 +5,15 @@
   cursor: pointer;
   .image {
     background-color: #222;
-    border-radius: 8px;
+    display: flex;
+    /* border-radius: 8px; */
+    width: 100%;
+    border-radius: 16px;
     aspect-ratio: auto 1/1;
+    .img__class {
+      width: 100%;
+      border-radius: 16px;
+    }
   }
   .bookmark {
     position: absolute;
