--- a/src/components/atoms/Home/HomeMenuIcon/HomeMenuIcon.module.scss
+++ b/src/components/atoms/Home/HomeMenuIcon/HomeMenuIcon.module.scss
@@ -1,10 +1,11 @@
 .menu {
   width: 100px;
   display: flex;
-  height: 100%;
+  height: 4.2rem;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  font-weight: 700;
   cursor: pointer;
   .icon {
     width: 100%;
