--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,7 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	background-color: #eee;
 }
 
 a {
@@ -42,7 +43,7 @@ button {
 	height: 80px;
 	border-bottom: 1px solid #ccc;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 	background-color: var(--light-mode);
 	z-index: 4;
 }
@@ -51,6 +52,7 @@ button {
 	position: absolute;
 	position: sticky;
 	top: 0;
+	border-bottom: 1px solid #ccc;
 }
 
 .nav.search {
@@ -61,14 +63,19 @@ button {
 
 .home-menu {
 	/* width: var(--desktop-width); */
+	max-width: 700px;
 	padding: var(--desktop-padding);
 	display: flex;
+	/* justify-content: center; */
+	margin: 0 auto;
 	align-items: center;
-	height: 100px;
+	/* height: 100px; */
 	/* position: sticky; */
 	background-color: var(--light-mode);
 	padding: var(--desktop-padding);
 	z-index: 3;
+	flex-wrap: wrap;
+	border-bottom: 1px solid #ccc;
 }
 
 .home-menu.fixed {
@@ -92,7 +99,10 @@ button {
 
 .main {
 	width: var(--desktop-width);
+	max-width: 700px;
 	padding: var(--desktop-padding);
+	background-color: var(--light-mode);
+	margin: 0 auto;
 }
 
 .background-gray {
@@ -126,20 +136,22 @@ button {
 }
 .footer {
 	width: var(--desktop-width);
-	height: 60px;
+	height: 35px;
 	padding: 20px 24px;
 	border-top: 1px solid #ccc;
 	background-color: var(--light-mode);
 	z-index: 3;
-}
-
-.footer.fixed {
 	position: absolute;
-	position: sticky;
 	bottom: 0;
 }
 
-.footer__flex {
+.footer.fixed {
+	/* position: absolute;
+	position: sticky;
+	bottom: 0; */
+}
+
+/* .footer__flex {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -175,4 +187,4 @@ button {
 	font-size: 10px;
 	border-top: 1px solid #ccc;
 	padding-top: 10px;
-}
+} */
