[Fix] Build Test, Search Header 수정

--- a/src/components/atoms/Logo/Logo.module.scss
+++ b/src/components/atoms/Logo/Logo.module.scss
@@ -4,10 +4,11 @@
   align-items: center;
   cursor: pointer;
   .logo__icons {
-    font-size: 22px;
+    font-size: 24px;
   }
   .logo__title {
     padding-left: 5px;
-    font-size: 22px;
+    font-size: 24px;
+    margin: 0;
   }
 }
