--- a/src/components/molecules/SearchHeader/SearchHeader.module.scss
+++ b/src/components/molecules/SearchHeader/SearchHeader.module.scss
@@ -1,22 +1,20 @@
 .search {
-  border-radius: 40px;
+  border-radius: 8px;
   border: 1px solid #ccc;
-  min-width: 335px;
-  max-width: 335px;
-  width: 25%;
-  height: 50px;
-  padding: 0 0 0 8px;
+  width: 70%;
+  height: 35px;
+  padding: 0 8px;
   display: flex;
   flex-wrap: nowrap;
-  .search__btn {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
+  position: relative;
+  line-height: 35px;
+  cursor: pointer;
+  .btn__area {
     padding: 0;
     margin: 8px 8px 8px 0;
     font-size: 20px;
-    color: white;
     line-height: 20px;
-    background-color: #FF385C;
+    position: absolute;
+    right: 0;
   }
 }
